--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
         <div class="half">
             <h1>Hello World</h1>
@@ -35,7 +35,7 @@
 
     </section>
 
-    <section class="middle">
+    <section class="middle flexible-container">
 
         <div class="half">
             <img src="images/my-bg.png" alt="">
@@ -51,6 +51,37 @@
             <a class="hire-me" href="https://github.com/Newaz121" target="blank">Download Resume</a>
 
         </div>
+    </section>
+
+    <section class="experienc-area">
+
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+
+            <div class="experienc-item">
+
+                <h2>Full Stack Web Developer </h2>
+                <h3 class="orange">2021-Present | Pro Level Developer
+                </h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div class="experienc-item">
+
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+            </div>
+
+        </div>
+
+
     </section>
 
 
