--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1>Experiences</h1>
         <div class="flexible-container">
 
-            <div class="experienc-item">
+            <div id="web" class="experienc-item">
 
                 <h2>Full Stack Web Developer </h2>
                 <h3 class="orange">2021-Present | Pro Level Developer
@@ -69,7 +69,7 @@
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
 
-            <div class="experienc-item">
+            <div id="web1" class="experienc-item">
 
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
@@ -83,6 +83,9 @@
 
 
     </section>
+    <hr>
+
+    <footer class="footer">&copy copuright | 2021</footer>
 
 
 
